--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -33,6 +33,8 @@ h1 {
 }
 
 h2 {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #dbdbdb;
   font-family: NotoSans !important;
 }
 
@@ -114,75 +116,8 @@ h4 {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-h2 {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #dbdbdb;
-}
-
 body {
   overflow-x: hidden;
-}
-
-@media (max-width: 700px) {
-  table {
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    position: relative;
-    overflow: initial;
-    table-layout: fixed;
-  }
-
-  thead {
-    top: 55px;
-    z-index: 20;
-    display: block;
-    position: sticky;
-  }
-
-  table thead tr {
-    width: 100%;
-    display: block;
-    overflow-y: hidden;
-    overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
-  }
-
-  thead tr th,
-  tbody tr td {
-    min-width: 10rem;
-    width: 20%;
-    max-width: 100%;
-  }
-
-  thead tr th:first-child,
-  tbody tr td:first-child {
-    min-width: 12rem;
-    width: 20%;
-    max-width: 100%;
-  }
-
-  thead tr th:nth-child(2),
-  tbody tr td:nth-child(2) {
-    min-width: 14rem;
-    width: 20%;
-    max-width: 100%;
-  }
-
-  tbody {
-    width: 100%;
-    display: block;
-    overflow: auto;
-    scroll-snap-type: x mandatory;
-  }
-
-  thead tr::-webkit-scrollbar {
-    display: none;
-  }
-
-  thead tr {
-    overflow-x: hidden;
-  }
 }
 
 table,
@@ -192,9 +127,68 @@ table,
   max-width: 100%;
   position: relative;
   overflow: initial;
+  table-layout: fixed;
   text-indent: 0;
   border-collapse: separate;
   border-spacing: 0px;
+}
+
+thead tr {
+  overflow-x: hidden;
+}
+
+thead {
+  top: 55px;
+  z-index: 20;
+  display: block;
+  position: sticky;
+}
+
+tbody {
+  width: 100%;
+  display: block;
+  overflow: auto;
+  scroll-snap-type: x mandatory;
+}
+
+table thead tr {
+  width: 100%;
+  display: block;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+
+thead tr th,
+tbody tr td {
+  min-width: 10rem;
+  width: 20%;
+  max-width: 100%;
+}
+
+thead tr th:first-child,
+tbody tr td:first-child {
+  min-width: 16rem;
+  width: 20%;
+  max-width: 100%;
+}
+
+thead tr th:nth-child(2),
+tbody tr td:nth-child(2) {
+  min-width: 14rem;
+  width: 20%;
+  max-width: 100%;
+}
+
+thead tr th:nth-child(3),
+tbody tr td:nth-child(3) {
+  min-width: 14rem;
+  width: 20%;
+  max-width: 100%;
+}
+
+thead tr::-webkit-scrollbar {
+  display: none;
 }
 
 table tr:nth-child(2n) {
@@ -203,17 +197,6 @@ table tr:nth-child(2n) {
 
 [data-theme="dark"] table tr:nth-child(2n) {
   background-color: var(--ifm-table-background);
-}
-
-table tr:first-child td,
-table tr:first-child {
-  border-top: none;
-}
-
-thead {
-  top: 55px;
-  z-index: 20;
-  position: sticky;
 }
 
 table thead th {
@@ -239,6 +222,11 @@ table tbody tr td {
   border-top: 1px solid #393939;
 }
 
-[data-theme="dark"] thead tr:first-child {
+thead tr:first-child {
   border-bottom: none;
+}
+
+table tr:first-child td,
+table tr:first-child {
+  border-top: none;
 }
