--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -252,6 +252,10 @@ table tr:first-child {
   z-index: 50;
 }
 
+[data-theme="dark"] .scrollHint {
+  background-color: rgba(255, 255, 255, 0.65);
+}
+
 .scrollHint.visible {
   display: flex;
 }
