--- a/src/theme/RollButton/style.css
+++ b/src/theme/RollButton/style.css
@@ -57,7 +57,7 @@
   transform: rotate(45deg);
 }
 
-.button-3.learn-more .button-text {
+.button-3 .button-text {
   transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
   position: absolute;
   top: 0;
