--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -131,7 +131,6 @@ button {
   background-color: var(--ifm-color-primary-darker);
   border: 1px solid var(--ifm-color-primary-darker);
   border-radius: 6px;
-  box-shadow: rgba(27, 31, 35, 0.1) 0 1px 0;
   box-sizing: border-box;
   color: #fff;
   font-weight: 500;
@@ -189,7 +188,6 @@ button {
   background-color: #fafbfc;
   border: 1px solid rgba(27, 31, 35, 0.15);
   border-radius: 6px;
-  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
   box-sizing: border-box;
   color: #24292e;
   font-weight: 500;
@@ -206,6 +204,12 @@ button {
   word-wrap: break-word;
 }
 
+.light:hover {
+  background-color: #b5b9c21c;
+  text-decoration: none;
+  transition-duration: 0.1s;
+}
+
 [data-theme="dark"] .light {
   box-shadow: none;
   background-color: transparent;
@@ -219,9 +223,10 @@ button {
   transition-duration: 0.1s;
 }
 
-.light:hover {
-  background-color: #f3f4f6;
-  text-decoration: none;
+[data-theme="dark"] .default:active {
+  background-color: #3962d4;
+  border: 1px solid #3962d4;
+  box-shadow: rgba(225, 228, 232, 0.2) 0 1px 0 inset;
   transition-duration: 0.1s;
 }
 
@@ -235,6 +240,11 @@ button {
 .light:active {
   background-color: #edeff2;
   box-shadow: rgba(225, 228, 232, 0.2) 0 1px 0 inset;
+  transition: none 0s;
+}
+
+[data-theme="dark"] .light:active {
+  background-color: #567de6;
   transition: none 0s;
 }
 
