--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -169,37 +169,10 @@ table thead tr {
 
 thead tr th,
 tbody tr td {
-  min-width: 10rem;
+  min-width: 9rem;
   width: 20%;
   max-width: 100%;
-}
-
-thead tr th:first-child,
-tbody tr td:first-child {
-  min-width: 17rem;
-  width: 10%;
-  max-width: 100%;
-}
-
-thead tr th:nth-child(2),
-tbody tr td:nth-child(2) {
-  min-width: 14rem;
-  width: 30%;
-  max-width: 100%;
-}
-
-thead tr th:nth-child(3),
-tbody tr td:nth-child(3) {
-  min-width: 14rem;
-  width: 30%;
-  max-width: 100%;
-}
-
-thead tr th:nth-child(4),
-tbody tr td:nth-child(4) {
-  min-width: 14rem;
-  width: 30%;
-  max-width: 100%;
+  word-break: break-word;
 }
 
 thead tr::-webkit-scrollbar {
