--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -182,6 +182,15 @@ tbody tr td:first-child {
   max-width: 100%;
 }
 
+@media (min-width: 1024px) {
+  thead tr th:first-child,
+  tbody tr td:first-child {
+    min-width: 16rem;
+    width: 10%;
+    max-width: 100%;
+  }
+}
+
 thead tr th:nth-child(2),
 tbody tr td:nth-child(2) {
   width: 30%;
