--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -185,7 +185,16 @@ tbody tr td:first-child {
 @media (min-width: 1024px) {
   thead tr th:first-child,
   tbody tr td:first-child {
-    min-width: 16rem;
+    min-width: 13rem;
+    width: 10%;
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 1440px) {
+  thead tr th:first-child,
+  tbody tr td:first-child {
+    min-width: 14rem;
     width: 10%;
     max-width: 100%;
   }
