--- a/src/theme/NotifyButton/style.css
+++ b/src/theme/NotifyButton/style.css
@@ -1,4 +1,6 @@
 .notify-button {
+  vertical-align: middle;
+  display: inline;
   width: 100%;
 }
 
@@ -89,6 +91,7 @@ a:hover {
 .searchbox-wrap input {
   flex: 1;
   padding: 20px 16px;
+  background-color: field;
   font-size: 14px;
   -webkit-border-top-left-radius: 18px;
   -webkit-border-bottom-left-radius: 18px;
@@ -98,13 +101,17 @@ a:hover {
   border-bottom-left-radius: 18px;
   box-shadow: none;
   border: none;
+  margin: 0;
+  /* margin-right: -0.1249999962px; */
 }
 
 .searchbox-wrap input:focus {
   outline: none;
+  background-color: field;
 }
 
 .searchbox-wrap button {
+  margin: 0;
   padding-right: 10px;
   background-color: #fff;
   -webkit-border-top-right-radius: 18px;
