--- a/src/theme/Drawer/style.css
+++ b/src/theme/Drawer/style.css
@@ -29,26 +29,23 @@ svg.railroad-diagram g.non-terminal text {
 }
 
 svg.railroad-diagram rect {
-  stroke-width: 2;
-  stroke: black;
-  fill: #fff;
+  stroke-width: 1.3;
+  stroke: #9f9f9f;
+  fill: transparent;
 }
 
 svg.railroad-diagram path {
-  stroke-width: 1.5;
-  stroke: black;
-  fill: rgba(0, 0, 0, 0);
+  stroke-width: 1.2;
+  stroke: #9f9f9f;
+  fill: transparent;
 }
 
 [data-theme="dark"] svg.railroad-diagram rect {
-  stroke-width: 2;
-  stroke: #555555;
-  fill: #ebebeb;
+  stroke: #5e5e5e;
 }
 
 [data-theme="dark"] svg.railroad-diagram path {
-  stroke: #474748;
-  fill: rgba(0, 0, 0, 0);
+  stroke: #5e5e5e;
 }
 
 svg.railroad-diagram rect.group-box {
@@ -58,9 +55,18 @@ svg.railroad-diagram rect.group-box {
 }
 
 svg.railroad-diagram path.diagram-text {
-  stroke-width: 3;
+  stroke-width: 1;
   stroke: black;
   fill: white;
+}
+
+svg.railroad-diagram text {
+  font: normal 12px NotoSans;
+  fill: #1c1e21;
+}
+
+[data-theme="dark"] svg.railroad-diagram text {
+  fill: #e3e3e3;
 }
 
 svg.railroad-diagram g.diagram-text:hover path.diagram-text {
