fix: vertical align capsule button

--- a/src/theme/Capsule/styles.module.css
+++ b/src/theme/Capsule/styles.module.css
@@ -1,13 +1,15 @@
 .capsule {
-  height: 32px;
+  height: 24px;
   padding: 0 4px;
   margin: 0 auto;
   display: inline-flex;
   background: transparent;
-  border-radius: 80px;
-  border: 1px solid #bec3c9;
-  align-items: center;
+  /* border-radius: 80px; */
+  /* border: 1px solid #bec3c9; */
+  align-items: end;
   justify-content: space-between;
+  vertical-align: bottom;
+  padding-bottom: 4px;
 }
 
 .capsuleLeft {
@@ -37,4 +39,17 @@
   font-size: 14px;
   padding-left: 4px;
   padding-top: 1px;
+}
+
+.divider {
+  border-left: 1px solid #bec3c9;
+  height: 12px;
+  margin-bottom: 2px;
+  margin-left: 0;
+}
+
+.countLeft {
+  display: flex;
+  height: 16px;
+  align-items: center;
 }
