--- a/src/theme/OutlinedCard/styles.module.css
+++ b/src/theme/OutlinedCard/styles.module.css
@@ -1,4 +1,5 @@
 div.cardContainer {
+  background: none;
   border-radius: 3px;
   transition: all 300ms ease;
   cursor: pointer;
@@ -7,12 +8,19 @@ div.cardContainer {
   width: 100%;
 }
 
+[data-theme="dark"] div.cardContainer {
+  border: 1px solid #a6a6a6;
+}
+
 div.defaultContainer {
   border-radius: 3px;
 }
 
+[data-theme="dark"] div.defaultContainer {
+  border: 1px solid #a6a6a6;
+}
+
 div.cardContainer:hover {
-  background: #f2f6ff;
   border: 1px solid #cddbff;
   box-shadow: 0 0 0 1px #cddbff;
 }
@@ -23,7 +31,20 @@ div.cardContent {
 }
 
 div.title {
-  margin-bottom: 1rem;
+  margin-bottom: 1.4rem;
+}
+
+p.content {
+  font-size: 1rem;
+}
+
+[data-theme="dark"] div.title,
+[data-theme="dark"] p.content,
+div.title,
+p.content,
+p.cardLink {
+  color: var(--ifm-font-color-base);
+  font-family: var(--ifm-font-family-base);
 }
 
 div.title,
@@ -43,7 +64,7 @@ p.cardLinks {
 p.cardLink {
   cursor: pointer;
   color: #95adee;
-  font-size: 1.1rem;
+  font-size: 1rem;
   margin-bottom: 0.1rem;
   margin-right: 4px;
 }
