--- a/src/theme/OutlinedCard/styles.module.css
+++ b/src/theme/OutlinedCard/styles.module.css
@@ -14,6 +14,8 @@ div.cardContainer {
 
 div.defaultContainer {
   border-radius: var(--ifm-pagination-nav-border-radius);
+  margin: 1rem 0;
+  width: 100%;
 }
 
 [data-theme="dark"] div.defaultContainer {
