--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -139,7 +139,7 @@ h1 {
 
 h2 {
   padding-bottom: 10px;
-  border-bottom: 1px solid #86f2dd;
+  border-bottom: 1px solid var(--ifm-color-primary);
   font-family: Montserrat !important;
 }
 
@@ -210,7 +210,7 @@ h4 {
 
 .menu__list-item--collapsed .menu__link--sublist::after,
 .menu__list-item--collapsed .menu__caret::before {
-  background: no-repeat center url(../../static/img/plus.svg);
+  background: no-repeat center url(/static/img/plus.svg);
   filter: var(--ifm-menu-link-sublist-icon-filter);
   content: "";
   margin-left: auto;
@@ -237,8 +237,12 @@ h4 {
   width: 1.25rem;
   transform: rotate(0turn);
   transform-origin: center;
-  background: no-repeat center url(../../static/img/minus.svg);
+  background: no-repeat center url(/static/img/minus.svg);
   transition: background 200ms ease-out;
+}
+
+[data-theme="dark"] .menu__link--sublist-caret::after {
+  background: no-repeat center url(/static/img/minus-dark.svg);
 }
 
 .docusaurus-highlight-code-line {
@@ -469,6 +473,6 @@ table tr:first-child {
   }
 }
 
-/* .hr-powered-by {
+.hr-powered-by {
   display: none !important;
-} */
+}
