--- a/src/components/FeedbackForm/index.module.css
+++ b/src/components/FeedbackForm/index.module.css
@@ -49,14 +49,14 @@ button.footerButton {
   font-size: 14px;
   text-transform: none;
   border: 1px solid #0098ef;
-  font-family: Mulish;
+  font-family: var(--ifm-font-family-base);
 }
 
 p.rightText {
   font-weight: 100;
   margin-right: 20px;
   color: #999;
-  font-family: Mulish;
+  font-family: var(--ifm-font-family-base);
 }
 
 @media screen and (max-width: 1440px) {
