chore: remove transition

--- a/src/theme/DocSidebarItem/Category/styles.module.css
+++ b/src/theme/DocSidebarItem/Category/styles.module.css
@@ -28,8 +28,9 @@
   filter: none;
   height: 1.25rem;
   width: 1.25rem;
-  transform: rotate(0turn);
+  transform: rotate(0);
   transform-origin: center;
+  transition: none;
 }
 
 .nonCollapsedLists::after {
@@ -39,7 +40,7 @@
   filter: none;
   height: 1.25rem;
   width: 1.25rem;
-  transform: rotate(0turn);
+  transform: rotate(0);
   transform-origin: center;
   background: no-repeat center url(/static/img/minus.svg);
   transition: background 200ms ease-out;
