--- a/src/theme/DocSidebarItem/Category/styles.module.css
+++ b/src/theme/DocSidebarItem/Category/styles.module.css
@@ -2,24 +2,18 @@
   display: none;
 }
 
+.docSidebarItemCategoryUnderline {
+  padding-bottom: 2px;
+  border-bottom: 1px solid rgba(164, 162, 162, 0.16);
+  border-radius: 0;
+}
+
 .internalExpandedLink::after {
   background: none !important;
 }
 
-.internalExpandCollapseButton::before {
-  background: no-repeat center url(/static/img/minus.svg) !important;
-  content: "";
-  margin-left: auto;
-  min-width: 1.25rem;
-  filter: none;
-  height: 1.25rem;
-  width: 1.25rem;
-  transform: rotate(0turn);
-  transform-origin: center;
-  transition: background 200ms ease-out;
-}
-
-.collapsedLists::after {
+.collapsedLists::after,
+.internalExpandButton::before {
   background: no-repeat center url(/static/img/plus.svg);
   filter: var(--ifm-menu-link-sublist-icon-filter);
   content: "";
@@ -33,7 +27,8 @@
   transition: none;
 }
 
-.nonCollapsedLists::after {
+.nonCollapsedLists::after,
+.internalExpandCollapseButton::before {
   content: "";
   margin-left: auto;
   min-width: 1.25rem;
