--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -1,6 +1,6 @@
 button {
   display: block;
-  font-family: Montserrat;
+  font-family: var(--ifm-font-family-button);
   cursor: pointer;
 }
 
@@ -9,7 +9,8 @@ button {
   background-color: #0a6bff;
   border-radius: 4px;
   border: 0;
-  box-shadow: rgba(1, 60, 136, 0.5) 0 -1px 3px 0 inset, rgba(0, 44, 97, 0.1) 0 3px 6px 0;
+  box-shadow: rgba(1, 60, 136, 0.5) 0 -1px 3px 0 inset,
+    rgba(0, 44, 97, 0.1) 0 3px 6px 0;
   box-sizing: border-box;
   color: #fff;
   min-height: 48px;
@@ -73,7 +74,8 @@ button {
 
 .button-2:disabled {
   background-color: rgba(0, 0, 0, 0.12);
-  box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 0, rgba(0, 0, 0, 0.14) 0 0 0 0, rgba(0, 0, 0, 0.12) 0 0 0 0;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 0, rgba(0, 0, 0, 0.14) 0 0 0 0,
+    rgba(0, 0, 0, 0.12) 0 0 0 0;
   color: rgba(0, 0, 0, 0.37);
   cursor: default;
   pointer-events: none;
@@ -89,8 +91,8 @@ button {
 }
 
 .button-2:active {
-  box-shadow: rgba(0, 0, 0, 0.2) 0 5px 5px -3px, rgba(0, 0, 0, 0.14) 0 8px 10px 1px,
-    rgba(0, 0, 0, 0.12) 0 3px 14px 2px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 5px 5px -3px,
+    rgba(0, 0, 0, 0.14) 0 8px 10px 1px, rgba(0, 0, 0, 0.12) 0 3px 14px 2px;
   background: #a46bf5;
 }
 
@@ -151,14 +153,16 @@ button {
 
 .pulse:hover {
   border: 1px solid;
-  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.2);
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5),
+    0 0 20px rgba(255, 255, 255, 0.2);
   outline-color: rgba(51, 45, 140, 0);
   outline-offset: 15px;
   text-shadow: 1px 1px 2px #427388;
 }
 
 [data-theme="dark"] .pulse:hover {
-  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.2);
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5),
+    0 0 20px rgba(255, 255, 255, 0.2);
   outline-color: rgba(255, 255, 255, 0);
   outline-offset: 15px;
   text-shadow: 1px 1px 2px #427388;
