--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -22,7 +22,8 @@
   --ifm-code-font-size: 90%;
   --ifm-font-size-base: 92%;
   --ifm-z-index-fixed: 200;
-  --ifm-font-family-base: Mulish, sans-serif;
+  --ifm-font-family-base: Roboto, sans-serif;
+  --ifm-font-family-button: RobotoMono, Roboto, sans-serif;
   --ifm-paragraph-margin-bottom: 0.5rem;
   --ifm-list-paragraph-margin: 0.2rem;
   letter-spacing: 0px;
@@ -77,7 +78,7 @@ html[data-theme="dark"] {
 .theme-doc-sidebar-item-category-level-1 > div > a,
 .theme-doc-sidebar-item-category-level-1 > div > a:hover {
   color: var(--ifm-color-emphasis-700);
-  font-family: Montserrat-Medium;
+  font-family: Roboto-Medium;
   padding-top: 1.4rem;
 }
 
@@ -146,13 +147,13 @@ html[data-theme="dark"] {
 }
 
 h1 {
-  font-family: Montserrat-ExtraLight !important;
+  font-family: Roboto-ExtraLight !important;
 }
 
 h2 {
   padding-bottom: 10px;
   border-bottom: 1px solid var(--ifm-color-neutral-900);
-  font-family: Montserrat !important;
+  font-family: var(--ifm-font-family-base) !important;
 }
 
 [data-theme="dark"] h2 {
@@ -160,11 +161,11 @@ h2 {
 }
 
 h3 {
-  font-family: Montserrat-Medium !important;
+  font-family: Roboto-Medium !important;
 }
 
 h4 {
-  font-family: Montserrat-SemiBold !important;
+  font-family: Roboto-SemiBold !important;
 }
 
 /* Custom Ordered List  */
@@ -183,7 +184,10 @@ h4 {
   margin-left: 1.5rem;
 }
 
-.theme-doc-markdown ol li:not(.tabs__item) > :first-child:not(code, strong)::before {
+.theme-doc-markdown
+  ol
+  li:not(.tabs__item)
+  > :first-child:not(code, strong)::before {
   font-size: 0.75rem;
   font-weight: bold;
   counter-increment: circle-counter;
@@ -223,7 +227,7 @@ h4 {
 
 .theme-doc-sidebar-menu > .theme-doc-sidebar-item-link-level-1 a {
   color: var(--ifm-color-emphasis-700);
-  font-family: "Montserrat-Medium";
+  font-family: Roboto-Medium;
   padding-top: 1.4rem;
 }
 
