--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,6 +27,8 @@
   --ifm-paragraph-margin-bottom: 0.5rem;
   --ifm-list-paragraph-margin: 0.2rem;
   letter-spacing: 0px;
+  --ifm-font-family-monospace: RobotoMono, SFMono-Regular, Menlo, Monaco,
+    Consolas, "Liberation Mono", "Courier New", monospace;
 
   --doc-sidebar-width: 260px !important;
   --ifm-tabs-padding-vertical: 0.5rem !important;
@@ -44,6 +46,9 @@
   --ifm-color-primary-lightest: #f9fafe;
   --ifm-background-color: #1f2765;
   --ifm-navbar-link-color: #e3e3e3;
+  --ifm-font-color-base: #b7b7c3;
+  --ifm-heading-color: #e3e3e3;
+  /* --ifm-toc-link-color: #b7b7c3; */
 
   --ifm-color-success-dark: rgb(0, 139, 0);
   --ifm-color-success-darker: rgb(0, 139, 0);
@@ -138,7 +143,7 @@ html[data-theme="dark"] {
 }
 
 .markdown > h3 {
-  --ifm-h3-font-size: 1.2rem;
+  --ifm-h3-font-size: 1.3rem;
 }
 
 /* hide home icon in breadcrumbs */
@@ -164,7 +169,7 @@ h2 {
 
 h3,
 h4 {
-  font-weight: 300;
+  font-weight: 200;
 }
 
 /* Custom Ordered List  */
@@ -473,4 +478,9 @@ table tr:first-child {
 
 .container .language-sql + div.theme-code-block:hover div button {
   display: none;
+}
+
+/* Footer */
+.pagination-nav__label {
+  font-weight: normal;
 }
