--- a/src/theme/NotifyButton/style.css
+++ b/src/theme/NotifyButton/style.css
@@ -55,7 +55,8 @@
   background: #fff;
   color: #a3a3a3;
   font: inherit;
-  box-shadow: 2px 6px 10px 0 rgba(0, 0, 0, 0.2), -2px -6px 10px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    -2px -6px 10px 0 rgba(0, 0, 0, 0.2);
   border: 0;
   outline: 0;
   padding: 18px 16px;
@@ -78,7 +79,8 @@
   display: flex;
   width: 100%;
   border-radius: 18px;
-  box-shadow: rgb(0 0 0 / 19%) -5px 0px 6px 1px, rgb(0 0 0 / 19%) 5px 4px 6px 1px;
+  box-shadow: rgb(0 0 0 / 19%) -5px 0px 6px 1px,
+    rgb(0 0 0 / 19%) 5px 4px 6px 1px;
 }
 
 .searchbox-wrap input {
@@ -223,7 +225,8 @@
   max-width: 300px;
   width: 100%;
   background: var(--background);
-  box-shadow: inset 0 0 0 var(--border-width, 1px) var(--border, var(--border-default));
+  box-shadow: inset 0 0 0 var(--border-width, 1px)
+    var(--border, var(--border-default));
   border-radius: 9px;
   padding-right: 4px;
   transition: box-shadow 0.25s;
