style: table th bg color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -369,7 +369,7 @@ table thead th {
 }
 
 [data-theme="dark"] table th {
-  background-color: #001f2b;
+  background-color: #091720;
 }
 
 table tbody tr td {
