--- a/src/components/LinkGroup/index.module.css
+++ b/src/components/LinkGroup/index.module.css
@@ -14,6 +14,12 @@
   margin: 10px;
 }
 
+.linkButtonNoLeftBorder {
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+  transition: all 0.1s !important;
+}
+
 @media (max-width: 996px) {
   .container {
     position: static;
