--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,6 +19,9 @@
   --ifm-color-neutral-400: #b3b3b3;
   --ifm-color-neutral-900: #16171a;
   --ifm-navbar-link-color: #16171a;
+  --ifm-button-background-color: var(--ifm-color-primary-dark);
+  --ifm-button-hover-background-color: #0179be;
+
   --ifm-code-font-size: 90%;
   --ifm-font-size-base: 92%;
   --ifm-z-index-fixed: 200;
@@ -49,6 +52,15 @@
   --ifm-background-color: #1f2765;
   --ifm-navbar-link-color: #e3e3e3;
   --ifm-heading-color: #e3e3e3;
+
+  --ifm-button-background-color: linear-gradient(
+      0deg,
+      rgba(72, 220, 188, 0.1),
+      rgba(72, 220, 188, 0.1)
+    ),
+    #0a3246;
+  --ifm-button-hover-background-color: #102432;
+  --ifm-button-color: #48dcbc;
 
   --ifm-blockquote-color: #b8c4c9;
   --ifm-font-color-base: #b8c4c9;
