chore: link color 48dcbc

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -84,7 +84,7 @@ html[data-theme="dark"] {
   --ifm-hover-overlay: #ffffff0d;
   --ifm-color-content: #e3e3e3;
   --ifm-color-content-secondary: #fff;
-  --ifm-link-color: #86f2dd;
+  --ifm-link-color: #48dcbc;
   --ifm-tabs-color-active-border: #86f2dd;
   --ifm-tabs-color-active: #86f2dd;
   --ifm-code-background: #fafafa28;
