--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -22,6 +22,7 @@
   --ifm-button-background-color: var(--ifm-color-primary-dark);
   --ifm-button-hover-background-color: #0179be;
   --ifm-button-color: #0179be;
+  --ifm-card-background-color: #152431;
 
   --ifm-code-font-size: 90%;
   --ifm-font-size-base: 92%;
