--- a/src/theme/DocSidebarItem/Category/styles.module.css
+++ b/src/theme/DocSidebarItem/Category/styles.module.css
@@ -2,6 +2,11 @@
   display: none;
 }
 
+.docSidebarHeadingColor,
+.docSidebarHeadingColor:hover {
+  color: var(--ifm-heading-color) !important;
+}
+
 .docSidebarItemCategoryUnderline {
   padding-bottom: 2px;
   border-bottom: 1px solid rgba(164, 162, 162, 0.16);
