chore: level 1 link and html

--- a/src/theme/DocSidebarItem/Html/styles.module.css
+++ b/src/theme/DocSidebarItem/Html/styles.module.css
@@ -1,6 +1,10 @@
 @media (min-width: 997px) {
   .menuHtmlItem {
-    padding: var(--ifm-menu-link-padding-vertical)
-      var(--ifm-menu-link-padding-horizontal);
+    padding: var(--ifm-menu-link-padding-vertical) var(--ifm-menu-link-padding-horizontal);
   }
+}
+
+.docSidebarHeadingColor,
+.docSidebarHeadingColor:hover {
+  color: var(--ifm-heading-color) !important;
 }
