--- a/src/theme/DocSidebarItem/Link/styles.module.css
+++ b/src/theme/DocSidebarItem/Link/styles.module.css
@@ -5,3 +5,8 @@
 .internalDocLink {
   background: none;
 }
+
+.docSidebarHeadingColor,
+.docSidebarHeadingColor:hover {
+  color: var(--ifm-heading-color) !important;
+}
