--- a/src/components/FeedbackForm/index.module.css
+++ b/src/components/FeedbackForm/index.module.css
@@ -18,6 +18,10 @@
   margin-bottom: 20px;
 }
 
+[data-theme="dark"] .breakLine {
+  background-color: #152c3c;
+}
+
 .leftGroupContainer {
   display: flex;
   flex-direction: column;
