--- a/src/theme/OutlinedCard/styles.module.css
+++ b/src/theme/OutlinedCard/styles.module.css
@@ -9,7 +9,7 @@ div.cardContainer {
 }
 
 [data-theme="dark"] div.cardContainer {
-  border: 1px solid var(--ifm-color-emphasis-200);
+  border: 1px solid var(--ifm-card-border-color);
   transition: all var(--ifm-transition-fast) ease;
   transition-property: border;
   background-color: var(--ifm-card-background-color);
@@ -23,7 +23,7 @@ div.defaultContainer {
 
 [data-theme="dark"] div.defaultContainer {
   background-color: var(--ifm-card-background-color);
-  border: 1px solid var(--ifm-color-emphasis-200);
+  border: 1px solid var(--ifm-card-border-color);
   transition: all var(--ifm-transition-fast) ease;
   transition-property: border;
 }
