--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -33,8 +33,8 @@
   --ifm-paragraph-margin-bottom: 0.5rem;
   --ifm-list-paragraph-margin: 0.2rem;
   letter-spacing: 0px;
-  --ifm-font-family-monospace: RobotoMono, SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
+  --ifm-font-family-monospace: RobotoMono, SFMono-Regular, Menlo, Monaco,
+    Consolas, "Liberation Mono", "Courier New", monospace;
 
   --doc-sidebar-width: 260px !important;
   --ifm-tabs-padding-vertical: 0.5rem !important;
@@ -55,7 +55,6 @@
   --ifm-background-color: #1f2765;
   --ifm-navbar-link-color: #e3e3e3;
   --ifm-heading-color: #e3e3e3;
-  --ifm-card-background-color: #152431;
 
   --ifm-button-background-color: linear-gradient(
       0deg,
@@ -81,6 +80,10 @@
   --docsearch-primary-color: var(--ifm-color-primary-darkest) !important;
 }
 
+[data-theme="dark"] hr {
+  background-color: #16545e;
+}
+
 html[data-theme="dark"] {
   --ifm-background-color: #091720;
   --ifm-background-surface-color: #222f3d;
@@ -96,6 +99,9 @@ html[data-theme="dark"] {
   --ifm-menu-color: #9da1a6;
   --docusaurus-collapse-button-bg: #091720 !important;
   --ifm-toc-border-color: #001f2b;
+
+  --ifm-card-background-color: #081f29;
+  --ifm-card-border-color: #152c3c;
 }
 
 /* custom sidebar menu */
@@ -220,7 +226,10 @@ h3 {
   margin-left: 1.5rem;
 }
 
-.theme-doc-markdown ol li:not(.tabs__item) > :first-child:not(code, strong)::before {
+.theme-doc-markdown
+  ol
+  li:not(.tabs__item)
+  > :first-child:not(code, strong)::before {
   font-size: 0.75rem;
   font-weight: bold;
   counter-increment: circle-counter;
@@ -405,7 +414,7 @@ table tbody tr td {
 }
 
 [data-theme="dark"] td {
-  border-top: 1px solid #a4a2a229;
+  border-top: 1px solid #152c3c;
 }
 
 thead tr:first-child {
